# worktree-hive

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REVIEW.md  SKILL-grok-linear.md  SKILL.md  _pyproject_fix.sh  _test_fix.sh  qodana.yaml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.beads/plans/: foundation-hybrid.json
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  config.yml  feature.md
.github/workflows/: python.yml  qodana_code_quality.yml  release.yml  rust.yml  security.yml
crates/wh/: Cargo.toml
crates/wh-core/: Cargo.toml
crates/wh-core/src/: contract.rs  error.rs  git_safe.rs  lib.rs  paths.rs  state.rs  status.rs  supervisor.rs  worktree.rs
crates/wh/src/: main.rs
docs/: json-contract.md  status-schema.md
docs/examples/: bootstrap.json  error-force-push.json  error-merge-forbidden.json  error-policy.json  state-add.json  state-show.json  worktree-create.json  worktree-list.json
python/: pyproject.toml
python/src/worktrees_hives/: __init__.py  attribution.py  babysit.py  bridge.py  ci_taxonomy.py  claim.py  cli.py  contract.py  discover.py  errors.py  issue_to_pr.py  orchestrator.py  stacks.py  watchlist.py
python/tests/: __init__.py  conftest.py  test_attribution.py  test_babysit.py  test_bridge.py  test_ci_taxonomy.py  test_claim.py  test_discover.py  test_issue_to_pr.py  test_orchestrator.py  test_stacks.py  test_watchlist.py
