[workspace]
members = ["crates/wh-core", "crates/wh"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/rmems/worktrees-hives"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
