[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worktrees-hives"
version = "0.1.0"
description = "Python orchestrator for worktrees-hives: issue-to-PR and PR-babysit with isolated subagents"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "rmems", email = "noreply@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rmems/worktrees-hives"
Repository = "https://github.com/rmems/worktrees-hives"
Issues = "https://github.com/rmems/worktrees-hives/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/worktrees_hives"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["worktrees_hives"]
mypy_path = "src"
