[package]
name = "wh-core"
description = "Safety-focused core primitives for worktrees-hives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "macros", "rt", "io-util"] }

[dev-dependencies]

[lints]
workspace = true
